package edu.hitsz.Game;

import edu.hitsz.application.ImageManager;


public class EasyGame extends Game {
    public EasyGame() {
        super();
        this.background = ImageManager.BACKGROUND_IMAGE1;
        this.level = 1;
    }

}
