package edu.hitsz.Game;

import edu.hitsz.application.ImageManager;

public class HardGame extends Game {
    public HardGame() {
        super();
        this.background = ImageManager.BACKGROUND_IMAGE3;
        this.level = 3;
    }

}
