package edu.hitsz.Game;

import edu.hitsz.application.ImageManager;

public class MediumGame extends Game {
    public MediumGame() {
        super();
        this.background = ImageManager.BACKGROUND_IMAGE2;
        this.level = 2;
    }

}
